# social-media

./: PROJECT_DESCRIPTION.txt  README.md  api-test.py  authsystem.md
.github/workflows/: deploy.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  conftest.py  create_admin.py  docker-compose.yml  pyproject.toml  verify_auth.py
backend/apps/blog/: admin.py  models.py  permissions.py  serializers.py  tasks.py  test_api.py  urls.py  views.py
backend/apps/blog/migrations/: 0001_initial.py  0002_initial.py  0003_alter_postimages_image.py  0004_alter_postimages_options_postimages_created_at.py
backend/apps/chat/: consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/apps/chat/migrations/: 0001_initial.py
backend/apps/comments/: admin.py  models.py  serializers.py  views.py
backend/apps/comments/migrations/: 0001_initial.py  0002_initial.py
backend/apps/likes/: models.py  serializers.py  views.py
backend/apps/likes/migrations/: 0001_initial.py  0002_alter_postlike_unique_together_and_more.py  0002_initial.py
backend/apps/tags/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/tags/migrations/: 0001_initial.py
backend/apps/users/: adapter.py  admin.py  apps.py  auth_views.py  models.py  serializers.py  signals.py  socials_auth_views.py  tasks.py  test_auth.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_alter_profile_profile_picture.py  0002_profile.py  0003_alter_profile_followers.py  0003_socialaccount.py
backend/apps/utils/: tasks.py  urls.py  views.py
backend/core/: asgi.py  pagination.py  settings.py  urls.py
frontend/: .gitignore  context.md  eslint.config.mjs  global.d.ts  middleware.js  next.config.mjs  package-lock.json  package.json  proxy.js
frontend/src/: middleware.js
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/components/: PrelineScript.js  PrelineScriptWrapper.js  theme-toggle.jsx
frontend/src/hooks/: useAuthCheck.js
nginx/: backend.conf
(+89 files in other folders)
