[project]
name = "backend"
version = "0.1.0"
description = "Aura Social Media Backend"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "black>=24.4.2",
    "boto3>=1.42.59",
    "celery[redis]>=5.6.2",
    "cloudinary>=1.44.1",
    "dj-database-url>=3.1.2",
    "django>=5.0,<6.0",
    "django-celery-beat>=2.9.0,<3.0",
    "django-cloudinary-storage>=0.3.0",
    "django-cors-headers>=4.9.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-nested-routers>=0.95.0",
    "drf-yasg>=1.21.15",
    "fido2>=2.1.1",
    "google-auth>=2.49.1",
    "gunicorn>=25.1.0",
    "httpx>=0.28.1",
    "isort>=5.13.2",
    "model-bakery>=1.23.3",
    "pillow>=12.1.1",
    "pre-commit>=3.6.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "python-decouple>=3.8",
    "requests>=2.32.5",
    "sentry-sdk[django]>=2.53.0",
    "whitenoise>=6.12.0",
]

[tool.uv]
package = false

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
